2005-06-13	Benedikt Meurer <benny@xfce.org>

	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.
	* configure.ac, THANKS, po/fr.po: Add french translations, thanks to
	  Stephane Roy <sroy@j2n.net>.

2005-06-11	Benedikt Meurer <benny@xfce.org>

	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.

2005-06-11	Benedikt Meurer <benny@xfce.org>

	* configure.ac, po/es.po, THANKS: Add spanish translations from
	  Patricio Carr <pato@patocarr.com>.

2005-06-08	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Check for libintl.h as well.
	* exo/exo-private.c: Need to include locale.h here to get LC_MESSAGES
	  on all systems.

2005-06-05	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-info.c: Use the MIME-Type's name as fallback if the
	  Shared MIME Database contains no comment for a given type.

2005-06-04	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-database.c: Run the reload signal at the highest
	  priority.

2005-06-04	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-database.h: Fix indentation.
	* exo/exo-mime-database.c (exo_mime_database_get_info): The
	  ExoMimeDatabase instance takes a reference on every returned
	  ExoMimeInfo object.

2005-05-30	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-database.{c,h}: Don't use separate private data
	  structure.
	* exo/exo-mime-info.{c,h}: Add exo_mime_info_get_media(),
	  exo_mime_info_get_subtype() and exo_mime_info_lookup_icon() methods.
	* python/exo.defs, python/exo.override: Add new methods to the Python
	  bindings.

2005-05-30	Benedikt Meurer <benny@xfce.org>

	* exo/Makefile.am: We don't use D-Bus any longer, so no need to keep
	  that define around.

2005-05-29	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mime-database.h: Fix missing function declaration.

2005-05-29	Benedikt Meurer <benny@xfce.org>

	* exo/xdgmime/: Import the xdgmime module from freedesktop.org.